# restful

./: .gitignore  README.md
go/: client.go  launch-client.ps1  launch-client.sh  launch-server.ps1  launch-server.sh  server.go
go/output/: output.go
java-jakarta/: pom.xml
java-jakarta/application/: launch-client.ps1  launch-client.sh  launch-server.ps1  launch-server.sh  logging.properties  pom.xml
java-jakarta/application/src/main/java/com/antonyudin/restful/services/: Application.java  Client.java  Server.java
java-jakarta/services/first/: pom.xml
java-jakarta/services/first/src/main/java/com/antonyudin/restful/services/first/jakarta/: Service.java
java-spring/: pom.xml
java-spring/application/: launch-client.ps1  launch-client.sh  launch-server.ps1  launch-server.sh  logging.properties  pom.xml
java-spring/application/src/main/java/com/antonyudin/restful/services/spring/: Client.java  Main.java  Server.java
java-spring/application/src/main/resources/: application.properties
java-spring/services/: pom.xml
java-spring/services/first/: pom.xml
java-spring/services/first/src/main/java/com/antonyudin/restful/services/first/spring/: Service.java
rust/: Cargo.toml  launch-client.ps1  launch-server.ps1  launch-server.sh
rust/src/: lib.rs  main.rs  restful.rs
