[package]
name = "restful"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
serde_xml = "0.9"
serde-xml-rs = "0.6"
serde_json = "1.0"
reqwest = "0.12"
tokio = { version = "1.36", features = ["full"] }

